@@ -1161,6 +1161,12 @@ public class Assert {
       Object a = actual[i];
       String explanation = "Arrays differ at element [" + i + "]: " + e + " != " + a;
       String errorMessage = message == null ? explanation : message + ": " + explanation;
+      if (a == null && e == null) {
+        continue;
+      }
+      if ((a == null && e != null) || (a != null && e == null)) {
+        failNotEquals(a, e, message);
+      }
       //Compare by value for multi-dimensional array.
       if(e.getClass().isArray()) {
         assertEquals(a, e, errorMessage);
